# matrix

./: CMakeLists.txt
src/: CMakeLists.txt
src/include/: matrix.h
src/matrix/: CMakeLists.txt  matrix.c
test/: CMakeLists.txt  main.cpp
